# desktop-serial-monitor

./: .clang-format  .clangd  .cmake-format.yaml  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  build-windows.sh
.devcontainer/: .dockerignore  Dockerfile.windows  toolchain-mingw.cmake
.githooks/: pre-commit
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  windows.yml
qml/: Main.qml
src/: main.cpp  serialporthandler.cpp  serialporthandler.h
